<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_colorful"
    android:orientation="vertical"
    android:padding="@dimen/margin_size">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/product_name_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_size"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            tools:text="@string/product_name" />

        <TextView
            android:id="@+id/product_quantity_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:text="@string/quality" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/product_price_item"
            android:layout_width="147dp"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            tools:text="@string/price" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sale_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_size"
                android:background="@color/red"
                android:focusable="false"
                android:text="@string/sale"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:focusable="false"
                android:text="@string/edit"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>



